[build-system]
requires = ["hatchling", "pyserial", "crc"]
build-backend = "hatchling.build"

[project]
name = "instrumentpy"
version = "1.0.0"
authors = [
  { name="Jonas Claes", email="jonas@jonasclaes.be" },
]
description = "A library for controlling various instruments through Python."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jonasclaes/instrumentpy"
"Bug Tracker" = "https://github.com/jonasclaes/instrumentpy/issues"